fix global paddings on mobile

--- a/src/sass/_advantages-style.scss
+++ b/src/sass/_advantages-style.scss
@@ -7,7 +7,7 @@
 }
 
 #advantages .wrap {
-  padding: 6.47% 0;
+  @include top_padding;
   background-color: rgba(26, 30, 35, 0.85);
 }
 
@@ -81,7 +81,7 @@ ul {
   .advantages__item:nth-of-type(3),
   .advantages__item:nth-of-type(4){
     @include respond-to(mobile) {
-      padding-top:6%;
+      padding-top:7%;
     }
   }
 }
